--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
   <div class="version-subtitle">《吹矢タイマー Other_Ver.01》</div>
 </div>
 
+<div class="version-box" onclick="location.href='gemini/index.html'">
+  <div class="version-title">
+  Ⅳ．Gemini version <span style="font-size:0.7em; color:#aaa;">(音声認識)</span>
+  </div>
+  <div class="version-subtitle">《「スタート/開始/始め」を認識》</div>
+</div>
+
 <script>
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('./service-worker.js');
