--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <div class="version-title">
   Ⅳ．Gemini version <span style="font-size:0.7em; color:#aaa;">(音声認識)</span>
   </div>
-  <div class="version-subtitle">《「スタート/開始/始め」を認識》</div>
+  <div class="version-subtitle">「スタート/開始/始め」を認識</div>
 </div>
 
 <script>
